--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Special Elite', cursive;
+    font-family: Arial, Helvetica, sans-serif
     background-color: #111;
     color: #8b8b8b; 
     margin: 0;
@@ -200,7 +200,8 @@ p {
 
 .program button {
     background-color: #000;
-    color: #8b8b8b;
+    font-size: 1rem;
+    color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
