--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-    font-family: 'Special Elite', cursive;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #111;
     color: white;
-    text-shadow: black 1px 1px 3px;
+    text-shadow: black 1px 1px 4px;
     margin: 0;
     padding: 0;
-    line-height: 1.1;
-    font-size: 11px;
+    line-height: 2.4em;
+    font-size: 16px;
     text-size-adjust: none; 
     -webkit-text-size-adjust: none;
 }
@@ -21,11 +21,12 @@ a:hover {
 }
 
 a:focus, button:focus {
-    outline: none;
+    outline: 2px solid #ccc;
+    border-radius: 5px;
 }
 
 h1, h2, .title {
-    font-family: 'Freckle Face', monospace; 
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
     font-size: 2em;
 }
 
@@ -92,7 +93,7 @@ p {
     border-radius: 5px;
 }
 
-.nav li:hover .submenu {
+.nav li:hover .submenu, .nav li:focus-within .submenu {
     display: block;
 }
 
@@ -118,12 +119,11 @@ p {
 }
 
 .hero h1 {
-    font-size: 2.5em;
+    font-size: 4em;
     margin-bottom: 20px;
 }
 
 .hero p {
-    font-size: 1.2em;
     margin-bottom: 30px;
 }
 
