--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Special Elite', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #111;
     color: #8b8b8b; 
     margin: 0;
