--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111;
-    color: #8b8b8b; 
+    color: #FFF; 
     margin: 0;
     padding: 0;
     line-height: 1.1;
     font-size: 11px;
     text-size-adjust: none; 
     -webkit-text-size-adjust: none;
+    
+    
+}
+
+a.evitement {
+   display: inline-block;
+   color: #555;
+   background: #fff;
+   padding: .5em;
+   position: absolute;
+   left: -99999rem;
+   z-index: 100;
+}
+
+a.evitement:focus {
+   left: 0;
 }
 
 a {
     text-decoration: none;
-    color: #8b8b8b; 
+    color: #fff; 
 }
 
 a:hover {
