--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-    font-family: 'Special Elite', cursive;
-    background-color: #111;
-    color: #8b8b8b; 
-    margin: 0;
-    padding: 0;
-    line-height: 1.1;
-    font-size: 11px;
-    text-size-adjust: none; 
-    -webkit-text-size-adjust: none;
+    font-family: 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+background-color: #111;
+color: #d0d0d0;
+margin: 0;
+padding: 0;
+line-height: 1.5;
+font-size: 13px;
+text-size-adjust: none;
+-webkit-text-size-adjust: none;
+
 }
 
 a {
@@ -24,7 +25,8 @@ a:focus, button:focus {
 }
 
 h1, h2, .title {
-    font-family: 'Freckle Face', monospace; 
+    font-family: 'Roboto', sans-serif;
+ 
     font-size: 2em;
 }
 
